取り敢えずエアコンon offさせる

--- a/env.json.template
+++ b/env.json.template
@@ -1,10 +1,8 @@
 {
     "Parameters": { 
-      "API_KEY": "",
-      "API_URL": "",     
+      "API_URL": "https://api.nature.global",
+      "API_TOKEN": "",
       "LINE_BOT_CHANNEL_SECRET": "",
-      "LINE_BOT_CHANNEL_TOKEN": "",
-      "SLACK_SIGNING_SECRET": "",
-      "SLACK_OAUTH_TOKEN":""
+      "LINE_BOT_CHANNEL_TOKEN": ""
     }
 }
